--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
     "reset-css": "^5.0.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -30,6 +29,8 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
